--- a/spices/cix-util-linux.org
+++ b/spices/cix-util-linux.org
@@ -1,14 +1,13 @@
 # File          : cix-util-linux.org
 # Created       : <2016-10-14 Wed 23:08:36 GMT>
-# Modified      : <2017-8-05 Sat 01:21:51 BST> sharlatan
+# Modified      : <2017-8-05 Sat 01:27:31 BST> sharlatan
 # Author        : sharlatan
 # Maintainer(s) :
 # Sinopsis  :
 
 #+OPTIONS: num:nil
 
-[[file:../README.org::*Index][|≣|]]
-#+TITLE: Util Linux
+* Util Linux
 |----------------+--------------------------------------------------|
 | *Author*       | Karel Zak                                        |
 | *Contributors* | Ruediger Meier, Sami Kerola, Stanislav Brabec    |
