--- a/spices/cix-lshw.org
+++ b/spices/cix-lshw.org
@@ -1,18 +1,27 @@
 # File           : cix-lshw.org
-# Created        : <2016-12-25 Sun 22:56:53 GMT>
-# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
+# Created        : <2017-08-08 Tue 23:27:53 BST>
+# Modified       : <2017-8-08 Tue 23:34:43 BST> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
-# Sinopsis :
+# Sinopsis       :
 
 #+OPTIONS: num:nil
 
-[[file:../cix-main.org][|≣|]]#+TITLE: lshw
+[[file:../README.org*Index][|≣|]]
+#+TITLE: lshw
+|-----------------+----------------------------------|
+| *Author*        | Lyonel Vincent <lyonel@ezix.org> |
+| *Maintainer(s)* |                                  |
+| *Released*      |                                  |
+| *Source*        | [[https://github.com/lyonel/lshw][lshw.git]]                         |
+| *Info*          |                                  |
+|-----------------+----------------------------------|
 
-http://www.ezix.org/project/wiki/HardwareLiSter
 
-|----------+---|
-| *Author*   |   |
-| *Source*   |   |
-| *Released* |   |
-|----------+---|
+-----
+* Index
+* Receipts
+* Refreances
+
+# End of cix-lshw.org
+
