--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 # File           : README.org
 # Created        : <2016-11-16 Wed 00:51:06 GMT>
-# Last Modified  : <2017-8-16 Wed 00:14:24 BST> sharlatan
+# Last Modified  : <2017-8-18 Fri 00:06:01 BST> sharlatan
 # Author         : sharlatan
 # Short          : README-en
 
@@ -54,9 +54,9 @@ QTY  CMD       PKG
 10   find      gnu-findutils
 9    dd        gnu-coreutils
 6    awk       gawk
+5    strace    strace
 5    mount     util-linux
 5    ls        gnu-coreutils
-4    strace    strace
 4    lsof      lsof
 4    grep      gnu-grep
 4    curl      curl
@@ -66,6 +66,7 @@ QTY  CMD       PKG
 2    wget      wget
 2    tee       gnu-coreutils
 2    tar       tar
+2    ss        iproute2
 2    ssh       openssh
 2    rsync     rsync
 2    nohup     gnu-coreutils
@@ -81,6 +82,7 @@ QTY  CMD       PKG
 1    paste     gnu-coreutils
 1    pacman    pacman
 1    objdump   gnu-binutils
+1    nm        gnu-binutils
 1    mv        gnu-coreutils
 1    mktemp    gnu-coreutils
 1    mkdir     gnu-coreutils
@@ -97,6 +99,6 @@ QTY  CMD       PKG
 
 Distribution per example:
 
-Onliners:  142
-Scripts:   43
+Onliners:  150
+Scripts:   42
 #+END_SRC
