--- a/cix-main.org
+++ b/cix-main.org
@@ -1,6 +1,6 @@
 # File       : cix-main.org
 # Created    : Sat 07 Nov 2015 22:58:38
-# Modified   : <2017-8-15 Tue 23:54:34 BST> sharlatan
+# Modified   : <2017-8-19 Sat 01:12:15 BST> sharlatan
 # Maintainer : sharlatan <sharlatanus@gmail.com>
 # Sinopsis   : Index of of all files.
 
@@ -238,8 +238,8 @@ on *GNU/Linux*
 - *Kernel* /Go to basic/
   + [[./spices/cix-kmod.org][kmod]] :: Linux kernel module management utilities
 
-- *Cryptograpy* /Who break Enigma code?/
-  + [[./spices/cix-gpg.org][gnupg]] :: A GNU utility for secure communication and data storage
+- *Cryptograpy* /Who breaks Enigma code?/
+   + [[./spices/cix-gnugpg.org][gnupg]] :: A GNU utility for secure communication and data storage
 -----
 * Glosary
 - SUS :: Single UNIX Specitication
@@ -302,4 +302,4 @@ on *GNU/Linux*
   - #linux was created on 2001-02-09 23:16:24
   - #emacs was created on 2006-11-26 06:42:33
   - #org-mode was created on 2010-01-30 07:48:24
-# End of README.org
+# End of cix-main.org
