--- a/spices/cix-gawk.org
+++ b/spices/cix-gawk.org
@@ -1,22 +1,33 @@
-# File          : cix-awk.org
-# Created       : <2016-11-04 Fri 22:15:18 GMT>
-# Modified : <2017-8-07 Mon 00:40:08 BST> sharlatan
-# Author        : sharlatan
-# Maintainer    :
-# Sinopsis :
+# File       : cix-awk.org
+# Created    : <2016-11-04 Fri 22:15:18 GMT>
+# Modified   : <2017-8-22 Tue 23:09:54 BST> sharlatan
+# Author     : sharlatan
+# Maintainer :
+# Sinopsis   : The GNU version of the AWK text processing utility
 
 #+OPTIONS: num:nil
 
 [[file:../cix-main.org][|≣|]]
-#+TITLE: AWK
-|--------------+---|
-| *Author*       |   |
-| *Contributors* |   |
-|              |   |
-| *Realised*     |   |
-| *Source*       |   |
-|--------------+---|
+#+TITLE: gawk
+|--------------+--------------------|
+| *Author*     | Paul Rubin,        |
+|              | Paul Finlason,     |
+|              | Richard Stallman   |
+| *Maintainer* | Arnold D. Robbins, |
+|              | David Trueman      |
+| *Released*   | 1994               |
+| *Source*     | [[http://git.savannah.gnu.org/cgit/gawk.git][gawk.git]]           |
+| *Man*        | [[http://man7.org/linux/man-pages/man1/gawk.1.html][gawk.1]]             |
+| *Info*       |                    |
+|--------------+--------------------|
+The gawk package contains the GNU version of AWK text processing utility. AWK is
+a programming language designed for text processing and typically used as a data
+extraction and reporting tool.
 
+The gawk utility can be used to do quick and easy text pattern matching,
+extracting or reformatting. It is considered to be a standard Linux tool for
+text processing.
+-----
 * Index
 #+BEGIN_EXAMPLE
     awk (1)   - pattern scanning and pr    ocessing language
@@ -28,10 +39,14 @@
 * Receipts
 ** awk                                                                          :cmd:
 *** awk::options
+| OPT | TYPE | ++V | --V | DESC |
+|-----+------+-----+-----+------|
+|     |      |     |     |      |
+|-----+------+-----+-----+------|
 *** awk::examples
 **** awk-161111213155
 sort text by the length of lines:
-:   ~$ awk '{print length, $0;}' inptut_f | sort -n | grep -oP "(?<=\s).+"
+:    ~$ awk '{print length, $0;}' inptut_f | sort -n | grep -oP "(?<=\s).+"
 [[./cix-gnu-core-utilities.org::*sort][sort (1)]] [[./cix-gnu-grep.org::*grep][grep (1)]]
 
 **** awk-161120234902
@@ -77,6 +92,29 @@ measure total bytes writen since system boot, Linux:
   fi
 #+END_SRC
 [[file:./cix-gnu-core-utilities.org::*uname][uname (1)]], [[file:./cix-sed.org::*sed][sed (1)]], [[file:./cix-gnu-core-utilities.org::*echo][echo (1)]]
+
+**** awk-170822224800
+print all lines of a input_f:
+:    ~$ awk "{print}" input_f 
+:    ~$ awk "{print 0}" input_f 
+:    ~$ cat input_f | awk "{print}"
+
+**** awk-170822225001 
+number of lines in a file:
+:    ~$ awk 'END {print NR}' input_f
+
+**** awk-170822225128 
+number of fields (columns) in each row of input_f:
+:    ~$ awk '{print NF]' input_f
+
+**** awk-170822225351  
+list all lines longer than 50 characters:
+:    ~$ awk 'length($0) > 50 {print}' input_f
+
+**** awk-170822230017 
+calculate total size of files in directory including sub directories in Mb:
+:    ~$ find ./ -type f -print0 | xargs -0 ls -l | awk '{total += $5} END {print "subtotal: "total/1024/1024"Mb"}'
+[[file:./cix-gnu-findutils.org::*find][find]] [[file:./cix-gnu-findutils.org::*xargs][xargs]] [[file:./cix-gnu-coreutils.org::*ls][ls]]
 
 *** awk::files
 *** awk::see-also
