--- a/cix-main.org
+++ b/cix-main.org
@@ -1,6 +1,6 @@
 # File       : cix-main.org
 # Created    : Sat 07 Nov 2015 22:58:38
-# Modified   : <2017-8-19 Sat 01:12:15 BST> sharlatan
+# Modified   : <2017-9-02 Sat 00:33:16 BST> sharlatan
 # Maintainer : sharlatan <sharlatanus@gmail.com>
 # Sinopsis   : Index of of all files.
 
@@ -78,24 +78,23 @@ on *GNU/Linux*
   + [[./spices/cix-busybox.org][BusyBox]] :: the swiss army knife of embedded Linux
   + [[./spices/cix-gnu-coreutils.org][gnu-coreutis]] :: basic file, shell and text manipulation utilities: =Linux FreeBSD=
   + [[./spices/cix-kbd.org][kbd]] :: tools for configuring the console (keyboard, virtual terminals, etc.)
-  + [[./spices/cix-man-db.org][man-db]] :: tools for searching and reading man pages: =Linux=
-  + [[file:spices/cix-ncurses.org][ncurses]] :: terminal-independent method of updating character screens with
-               reasonable optimization.
+  + [[./spices/cix-man-db.org][man-db]] :: tools for searching and reading man pages: =GNU/Linux=
+  + [[file:spices/cix-ncurses.org][ncurses]] :: terminal-independent method of updating character screens
   + the heirloom project :: traditional implementations of standard UNIX utils
   + [[./spices/cix-toybox.org][toybox]]  :: common Linux commands for embedded systems (POSIX-2008 and LSB 4.1).
-  + [[./spices/cix-util-linux.org][util-linux]] :: is a standard package of the Linux operating system: =Linux=
+  + [[./spices/cix-util-linux.org][util-linux]] :: is a standard package of the Linux operating system: =GNU/Linux=
 
 - *File* /everything is a file/!
   + [[file:./spices/cix-diffutils.org][diffutils]] :: a gnu collection of diff utilities
   + [[./spices/cix-emacs.org][emacs]] :: gnu emacs text editor
   + [[./spices/cix-file.org][file]] :: a utility for determining file types: =Linux NetBSD FreeBSD OS/2 DOS Win=
   + [[./spices/cix-gawk.org][gawk]] :: the gnu version of the awk text processing utility
-  + [[./spices/cix-less.org][less]] :: a text file browser similar to more, but better: =Linux= =UNIX= =OS-X=
+  + [[./spices/cix-less.org][less]] :: a text file browser similar to more, but better: =GNU/Linux= =UNIX= =OS-X=
   + [[./spices/cix-lsof.org][lsof]] :: a utility which lists open files on a Linux/unix system
   + [[./spices/cix-micro.org][micro]] :: a modern and intuitive terminal-based text editor
   + [[./spices/cix-nano.org][nano]] :: a small text editor
   + [[./spices/cix-sed.org][sed]] :: a gnu stream text editor
-  + [[./spices/cix-vim.org][vim]] :: recent enhancements of vim: =FreeBSD= =Linux= =OS-X=
+  + [[./spices/cix-vim.org][vim]] :: recent enhancements of vim: =FreeBSD= =GNU/Linux= =OS-X=
 
 - *Transfare-sync* /put me up, put me down/
   + [[file:./spices/cix-curl.org][curl]] :: a utility for getting files from remote servers: =Linux FreeBSD=
@@ -113,8 +112,7 @@ on *GNU/Linux*
   + [[./spices/cix-e2fsprogs.org][e2fsprogs]] :: filesystem utilities for use with ext2/3/4
   + glusterfs :: distributed file system
   + [[./spices/cix-lvm2.org][lvm2]] :: userland logical volume management tools
-  + [[./spices/cix-nfs-kernel-server.org][nfs-kernel-server]] ::
-  + [[./spices/cix-nfs-utils.org][nfs-utils]] :: supporting clients and daemons for the kernel nfs server
+  + [[./spices/cix-nfs.org][nfs]] :: utilities for rall out NFS share 
   + [[file:./spices/cix-parted.org][parted]] :: the gnu disk partition manipulation program
   + [[./spices/cix-linux_diskquota.org][quota]] :: system tools for monitoring users disk usage
 
@@ -131,22 +129,17 @@ on *GNU/Linux*
   + [likwid]  :: 
 
 - *Hardware* /hard as a rock!/
-  + [[./spices/cix-dmidecode.org][dmidecode]] :: tool to analyse bios dmi data: =Linux= =FreeBSD= =NetBSD=
-       =OpenBSD= =BeOS= =Solaris= =Haiku=
- + [[./spices/cix-lshw.org][lshw]] :: hardware lister: =Linux=
-  + [[file:./spices/cix-oprofile.org][OProfile]] :: System wide profiler: =Linux=
-  + [[./spices/cix-pciutils.org][pciutils]] :: pci bus related utilities: =Linux FreeBSD netbsd openbsd=
-       =GNU/Linux FreeBSD Solaris/i386 AIX GNU-Hurdd Windows Cygwin BeOS Haiku=
-       =Darwin=
-  + [[./spices/cix-perf.org][perf]] :: Performance monitoring for the Linux kerne: =Linux=
-  + [[./spices/cix-smartmontools.org][smartmontools]] :: tools for monitoring smart capable hard disks: =OS-X=
-       =Linux= =FreeBSD= =NetBSD= =OpenBSD= =Solaris= =OS/2= =Cygwin= =QNX=
-       =eComStation= =Win=
-  + [[./spices/cix-stress.org][stress]] :: A tool to put given subsystems under a specified load: =Linux
-       Gentoo OpenBSD FreeBSD=
-  + [[./spices/cix-usbutils.org][usbutils]] :: Linux usb utilities: =Linux=
   + [dtrace] ::
   + [iw] :: A nl80211 based wireless configuration tool
+  + [[./spices/cix-dmidecode.org][dmidecode]] :: tool to analyse bios dmi data: =GNU/Linux= =FreeBSD= =NetBSD= =OpenBSD= =BeOS= =Solaris= =Haiku=
+  + [[./spices/cix-lshw.org][lshw]] :: hardware lister: =GNU/Linux=
+  + [[file:./spices/cix-oprofile.org][OProfile]] :: System wide profiler: =GNU/Linux=
+  + [[./spices/cix-pciutils.org][pciutils]] :: pci bus related utilities: =FreeBSD= =NetBSD= =OpenBSD= =GNU/Linux= =FreeBSD= =Solaris/i386= =AIX= =GNU/Hurdd= =Windows= =Cygwin= =BeOS= =Haiku= =Darwin=
+  + [[./spices/cix-perf.org][perf]] :: Performance monitoring for the Linux kerne: =GNU/Linux=
+  + [[./spices/cix-smartmontools.org][smartmontools]] :: tools for monitoring smart capable hard disks: =OS-X= =GNU/Linux= =FreeBSD= =NetBSD= =OpenBSD= =Solaris= =OS/2= =Cygwin= =QNX= =eComStation= =Win=
+  + [[./spices/cix-stress.org][stress]] :: A tool to put given subsystems under a specified load: =GNU/Linux= =Gentoo= =OpenBSD= =FreeBSD=
+  + [[file:./spices/cix-stress-ng.org][stress-ng]] :: stress test a computer system in various ways: =GNU/Linux= =GNU/Hurd= =FreeBSD= =OpenBSD= =NetBSD= =FreeBSD= =MINIX= =OpenIndiana=
+  + [[./spices/cix-usbutils.org][usbutils]] :: Linux usb utilities: =GNU/Linux=
 
 - *Searching* /loosing my religion/
   + [[./spices/cix-ack.org][ack]] :: grep-like text finder
@@ -154,20 +147,20 @@ on *GNU/Linux*
   + [[./spices/cix-fdupes.org][fdupes]] :: finds duplicate files in a given set of directories
   + [[./spices/cix-gnu-findutils.org][gnu-findutils]] :: the gnu versions of find utilities (find and xargs)
   + [[./spices/cix-gnu-grep.org][gnu-grep]] :: pattern matching utilities
-  + [[file:./spices/cix-jq.org][jq]] :: command-line json processor: =OS-X FreeBSD Solaris Linux Win=
+  + [[file:./spices/cix-jq.org][jq]] :: command-line json processor: =OS-X= =FreeBSD= =Solaris= =GNU/Linux= =Win=
   + [[file:./spices/cix-ripgrep.org][ripgrep]] :: rg combines the usability of The Silver Searcher with the raw speed of grep.
-  + [[file:./spices/cix-sift.org][sift]] :: A fast and powerful alternative to grep: =OS-X Linux=
+  + [[file:./spices/cix-sift.org][sift]] :: A fast and powerful alternative to grep: =OS-X= =GNU/Linux=
   + [[file:./spices/cix-ucg.org][ucg]] :: extremely fast grep-like tool specialized for searching large bodies of source code.
 
-- *Compress-archive* /i'm a pac man/
+- *Compress-archive* /I'm a pac man/
   + [[./spices/cix-bzip2.org][bzip2]] :: a file compression utility
   + [[./spices/cix-cpio.org][cpio]] :: a gnu archiving program
   + [[./spices/cix-tar.org][tar]] :: a file archiving program
   + [[./spices/cix-gzip.org][gzip]] :: the gnu data compression program
   + [[./spices/cix-unizp.org][unzip]] :: a utility for unpacking zip files
   + [[./spices/cix-lrzip.org][lrzip]] :: compression program optimized for large files
-  + [[./spices/cix-pax.org][pax]] :: posix file system archiver
-  + [[./spices/cix-xz.org][xz]] :: lzma compression utilities: =Linux FreeBSD=
+  + [[./spices/cix-pax.org][pax]] :: POSIX file system archiver
+  + [[./spices/cix-xz.org][xz]] :: lzma compression utilities: =GNU/Linux= =FreeBSD=
 
 - *Networking* /we all live in the someone's subnet in/
   + [[./spices/cix-bind-utils.org][bind-utils]] :: utilities for querying dns name server
@@ -176,13 +169,11 @@ on *GNU/Linux*
   + [[./spices/cix-iproute2.org][iproute2]] :: routing commands and utilities
   + [[./spices/cix-iptables.org][iptables]] :: Linux kernel packet filtering capabilities: *Linux*
   + [[./spices/cix-iputils.org][iputils]] :: network monitoring tools including ping: *Linux*
-  + [[./spices/cix-net-snmp.org][net-snmp]] :: a collection of snmp protocol tools and libraries
+  + [[./spices/cix-net-snmp.org][net-snmp]] :: a collection of snmp protocol tools and libraries: =GNU/Linux= =FreeBSD= =OpenBSD= =Solaris= =OS-X=
   + [[./spices/cix-net-tools.org][net-tools]] :: collection of base networking utilities
   + [[./spices/cix-nmap.org][nmap]] :: network exploration tool and security scanner
-  + [[./spices/cix-openssh.org][openssh]] :: an open source implementation of ssh protocol: =AIX HP-UX IRIX=
-       =Linux Next Sco Sni/Reliant Unix Solaris Digital Unix/Tru64/Osf Mac Os-X=
-       =Cygwin=
-  + [[./spices/cix-tcpdump.org][tcpdump]] :: dump traffic on a network: =Linux FreeBSD=
+  + [[./spices/cix-openssh.org][OpenSSH]] :: an open source implementation of ssh protocol: =AIX= =HP-UX= =IRIX= =GNU/Linux= =Next= =Sco= =Sni/Reliant= =Unix= =Solaris= =Digital= =Unix/Tru64/Osf= =Mac= =Os-X= =Cygwin=
+  + [[./spices/cix-tcpdump.org][tcpdump]] :: dump traffic on a network: =GNU/Linux= =FreeBSD=
 
 - *Shell* /not just sand.../
   + [[./spices/cix-gnu-bash.org][gnu-bash]] :: gnu bash shell built in commands
@@ -205,11 +196,9 @@ on *GNU/Linux*
   + [[file:./spices/cix-imagemagick.org][ImageMagick]] :: An X application for displaying and manipulating images
 
 - *Security* /it's never be save/
-  + [[file:./spices/cix-pam.org][pam]] :: an extensible library which provides authentication for applications:
-       =AIX DragonFly-BSD FreeBSD HP-UX Linux OS-X NetBSD Solaris=
-  + [[file:./spices/cix-libselinux-utils.org][libseLinux-utils]] :: seLinux libseLinux utilies
+  + [[file:./spices/cix-pam.org][pam]] :: an extensible library which provides authentication for applications: =AIX DragonFly-BSD FreeBSD HP-UX Linux OS-X NetBSD Solaris=
   + [[file:./spices/cix-sudo.org][sudo]] :: allows restricted root access for specified users
-  + [[file:./spices/cix-selinux.org][SElinux]] :: Security-Enhanced Linux: =Linux=
+  + [[file:./spices/cix-selinux.org][SElinux]] :: Security-Enhanced Linux: =GNU/Linux=
 
 - *Init-system* /let's party started!/
   + [[./spices/cix-systemd.org][systemd]] ::  a system and service manager
@@ -217,11 +206,17 @@ on *GNU/Linux*
   + [[./spices/cix-upstart.org][upstart]] :: event-based init daemo
 
 - *Development* /in the fields of observation chance favors only the prepared mind./
-  + [[./spices/cix-glibc.org][glibc]] :: common binaries and locale data for glibc
-  + [[./spices/cix-gdb.org][gdb]] :: a gnu source-level debugger for C, C++, Fortran, Go and other languages
-  + [[./spices/cix-gcc.org][gcc]] :: various compilers (c, c++, objective-c, java, ...)
   + [[./spices/cix-autoconf.org][autoconf]] :: a gnu tool for automatically configuring source code
+  + [[file:./spices/cix-automake.org][automake]] :: A GNU tool for automatically creating Makefiles
   + [[file:./spices/cix-ctags.org][ctags]] :: A C programming language indexing and/or cross-reference tool
+  + [[./spices/cix-gcc.org][gcc]] :: various compilers (c, c++, objective-c, java, ...)
+  + [[./spices/cix-gdb.org][gdb]] :: a gnu source-level debugger for C, C++, Fortran, Go and other languages
+  + [[file:./spices/cix-git.org][git]] :: Fast Version Control System
+  + [[./spices/cix-glibc.org][glibc]] :: common binaries and locale data for glibc
+  + [[file:./spices/cix-global.org][global]] :: Source code tag system
+  + [[file:./spices/cix-make.org][make]] :: A tool which simplifies the build process for users
+  + [[file:./spices/cix-valgrind.org][valgrind]] :: Tool for finding memory management bugs in programs
+  + [[file:./spaces/cix-gnu-bison.org][bison]] :: 
 
 - *Packaging* /pack me up, pack me down/
   + [[./spices/cix-apt.org][apt]] :: Debian/Ubuntu commandline package panager.
@@ -229,7 +224,7 @@ on *GNU/Linux*
   + [[file:./spices/cix-dnf.org][dnf]] :: fork of yum, using libsolv as a dependency resolve
   + [[file:./spices/cix-dpkg.org][dpkg]] :: package manager for debian
   + [[file:spices/cix-pacman.org][pacman]] :: is one of the major distinguishing features of Arch Linux
-  + [[file:./spices/cix-pkg-pkgng.org][pkg/pkgng]] :: is the Next Generation package management tool for FreeBSD
+  + [[file:./spices/cix-pkg-pkgng.org][pkg/pkgng]] :: is the Next Generation package management tool for FreeBSD: =FreeBSD=
   + [[file:./spices/cix-rpm.org][rpm]] :: package manager is a command line driven package management system
 
 - *Research* /I've got a clue!/
@@ -239,7 +234,7 @@ on *GNU/Linux*
   + [[./spices/cix-kmod.org][kmod]] :: Linux kernel module management utilities
 
 - *Cryptograpy* /Who breaks Enigma code?/
-   + [[./spices/cix-gnugpg.org][gnupg]] :: A GNU utility for secure communication and data storage
+  + [[./spices/cix-gnugpg.org][gnupg]] :: A GNU utility for secure communication and data storage
 -----
 * Glosary
 - SUS :: Single UNIX Specitication
@@ -274,12 +269,15 @@ on *GNU/Linux*
 - GNU Coreutils
   http://www.gnu.org/software/coreutils/manual/coreutils.html
 - Basics of the Unix Philosophy
-   http://homepage.cs.uri.edu/~thenry/resources/unix_art/ch01s06.html
+  http://homepage.cs.uri.edu/~thenry/resources/unix_art/ch01s06.html
 - Filenames and Pathnames in Shell: How to do it Correctly
   http://www.dwheeler.com/essays/filenames-in-shell.html
 - Rich’s sh (POSIX shell) tricks
   http://www.etalabs.net/sh_tricks.html
-- http://www.commandlinefu.com/commands/browse/sort-by-votes
+- Linux man pages online
+  http://man7.org/linux/man-pages/index.html
+- Commanline fu
+  http://www.commandlinefu.com/commands/browse/sort-by-votes
 - http://everythingsysadmin.com/
 
 ** Wikis
